fix openapi types and run codegen
