# apps/collector/docs/openapi.json
@@ -24,16 +24,6 @@
             }
           },
           {
-            "name": "interval",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "description": "Interval in seconds for time bucketing",
-              "default": 10,
-              "type": "number"
-            }
-          },
-          {
             "name": "channels",
             "in": "query",
             "required": true,
@@ -94,6 +84,16 @@
                 }
               ]
             }
+          },
+          {
+            "name": "interval",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "description": "Interval in seconds for time bucketing",
+              "default": 10,
+              "type": "number"
+            }
           }
         ],
         "responses": {
@@ -105,6 +105,7 @@
                   "type": "object",
                   "properties": {
                     "dataPoints": {
+                      "description": "Total number of data points returned",
                       "type": "number"
                     },
                     "metrics": {
@@ -113,6 +114,8 @@
                         "type": "object",
                         "properties": {
                           "time": {
+                            "description": "Timestamp of the metric",
+                            "format": "date-time",
                             "type": "string"
                           },
                           "channels": {
@@ -121,12 +124,15 @@
                               "type": "object",
                               "properties": {
                                 "channel": {
+                                  "description": "Channel number",
                                   "type": "number"
                                 },
                                 "kelvin": {
+                                  "description": "Temperature in Kelvin",
                                   "type": "number"
                                 },
                                 "resistance": {
+                                  "description": "Resistance in Ohms",
                                   "type": "number"
                                 }
                               },
@@ -179,6 +185,9 @@
         "tags": [
           "Scrape"
         ],
+        "operationId": "getScrapeMetrics",
+        "summary": "Get Scrape Metrics",
+        "description": "Retrieve metrics about the scraping process, including last error time, error counts per channel, and total successful scrapes",
         "responses": {
           "200": {
             "description": "Response for status 200",
@@ -192,23 +201,8 @@
                       "anyOf": [
                         {
                           "description": "Timestamp of the last error, or null if no errors have occurred",
-                          "anyOf": [
-                            {
-                              "description": "Timestamp of the last error, or null if no errors have occurred",
-                              "type": "Date"
-                            },
-                            {
-                              "format": "date-time",
-                              "type": "string"
-                            },
-                            {
-                              "format": "date",
-                              "type": "string"
-                            },
-                            {
-                              "type": "number"
-                            }
-                          ]
+                          "format": "date-time",
+                          "type": "string"
                         },
                         {
                           "type": "null"
@@ -216,12 +210,23 @@
                       ]
                     },
                     "errorCount": {
-                      "type": "object",
-                      "patternProperties": {
-                        "^(0|[1-9][0-9]*)$": {
-                          "description": "Number of errors for this channel",
-                          "type": "number"
-                        }
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "channel": {
+                            "description": "Channel number",
+                            "type": "number"
+                          },
+                          "count": {
+                            "description": "Number of errors for this channel",
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "channel",
+                          "count"
+                        ]
                       }
                     },
                     "successCount": {
@@ -238,8 +243,7 @@
               }
             }
           }
-        },
-        "operationId": "getScrapeMetrics"
+        }
       }
     }
   },
