# apps/collector/src/modules/query/model.ts
@@ -1,10 +1,6 @@
 import { Static, t } from "elysia";
 
 export const QueryMetricsRequestQuery = t.Object({
-  interval: t.Number({
-    description: "Interval in seconds for time bucketing",
-    default: 10,
-  }),
   channels: t.Array(t.Number(), {
     description: "List of channel numbers to retrieve",
   }),
@@ -14,18 +10,33 @@ export const QueryMetricsRequestQuery = t.Object({
   time_end: t.Date({
     description: "End time for the query in ISO format",
   }),
+  interval: t.Number({
+    description: "Interval in seconds for time bucketing",
+    default: 10,
+  }),
 });
 
 export const QueryMetricsResponse = t.Object({
-  dataPoints: t.Number(),
+  dataPoints: t.Number({
+    description: "Total number of data points returned",
+  }),
   metrics: t.Array(
     t.Object({
-      time: t.String(),
+      time: t.String({
+        description: "Timestamp of the metric",
+        format: "date-time",
+      }),
       channels: t.Array(
         t.Object({
-          channel: t.Number(),
-          kelvin: t.Number(),
-          resistance: t.Number(),
+          channel: t.Number({
+            description: "Channel number",
+          }),
+          kelvin: t.Number({
+            description: "Temperature in Kelvin",
+          }),
+          resistance: t.Number({
+            description: "Resistance in Ohms",
+          }),
         }),
       ),
     }),
